mi primer commit del footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,25 @@
     </div>
 
 
+    <footer> 
+      <menu>
 
+        <div class="cuadro" >
+          <div class="caja"></div>
+        </div>
+        <li><a href="#"><i class="fas fa-volume-up"></i></a></li>
+        <li><a href="#"><i class="fas fa-volume-mute"></i></a></li>
+        <li><a href="#"><i class="fas fa-angle-double-left"></i></a></li>
+        <li><a href="#"><i class="fas fa-angle-left"></i></a></li>
+        <li><a href="#"><i class="fas fa-play"></i></a></li>
+        <li><a href="#"><i class="fas fa-angle-right"></i></a></li>
+        <li><a href="#"><i class="fas fa-angle-double-right"></i></a></li>
+        <li><a href="#"><i class="fas fa-stop"></i></a></li>
+        
+        
+    </menu>
+  
+    </footer>
 
 
 
