Lectura y conversion del tiempo de una cancion de segundos a minutos y segundos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
             <h2 id="artist"></h2>
             <h2 id="genere"></h2>
             <h3 id="album"></h3>
+            <h4 id="tiempo"></h4>
           </p>
         </div>
+        
       <input type="checkbox" id="check">
       <label for="check">
       <i class="fas fa-bars" id="btn"></i>
