Lectura de archivos dentro de la carpeta Music en memoria local.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <p>
             <img src="" alt="" id="picture">
             <h1 id="title"></h1>
+            <h1 id="demo"></h1>
             <h2 id="artist"></h2>
             <h2 id="genere"></h2>
             <h3 id="album"></h3>
@@ -45,7 +46,7 @@
       </div>
       <section></section>
       <div id="contenedor">
-        <div id="musica" class="pagina">    
+        <div id="musica" class="pagina">
         </div>
         <div id="album" class="pagina esconder">
             <h1>Las canciones que el usuario tiene guardado en su computadora</h1>
@@ -71,9 +72,9 @@
         <i class="fas fa-times" id="close"></i>
       </label>
       <audio id = "music_player">
-        <source src="./musica/JekK_-_You_and_Me.mp3">
+        <source>
       </audio>
-      <menu>
+      <menu class='abrir'>
         <div class="cuadro" >
           <div class="caja"></div>
         </div>
